# qodana-eval

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
src/utils/: download.py  paths.py  repo_handling.py
