[tool.poetry]
name = "qodana-eval"
version = "0.1.0"
description = ""
authors = ["Ilia Kholkin <iluxa.kholkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
pandas = "^2.2.2"
requests = "^2.32.3"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
